# k8cloud-rs

./: .env  Cargo.toml
migrations/2023-09-02-133249_clusters/: up.sql
src/: main.rs  schema2.rs
src/cluster/: mod.rs  models.rs
src/cluster/services/: clusters.rs
src/db/: mod.rs  schema.rs
