[package]
name = "k8cloud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Environment
dotenvy = { version = "0.15.7" }

# Logging
log = "0.4.20"
pretty_env_logger = "0.5.0"

# Async
tokio = { version = "1.32.0", features = ["full"] }

# Serialization
serde = "1.0.188"

# UUID
uuid = { version = "1.4.1", features = ["serde", "v4"] }

# Chrono
chrono = "0.4.28"

# URL
url = "2.4.1"

# Macro for lazy statics
lazy_static = "1.4.0"

# Web
actix-web = "4.4.0"
actix-web-lab = "0.19.1"
actix-cors = "0.6.4"
#warp = "0.3.5"

# GraphQL
juniper = { git = "https://github.com/graphql-rust/juniper.git", features = ["default", "chrono"]}

# ORM
diesel = { version = "2.1.1", features = ["postgres", "extras"] }

#kube = { version = "0.85.0", features = ["runtime", "derive"] }
#k8s-openapi = { version = "0.19.0", features = ["v1_27"] }
